--- a/Byndyusoft.ServiceTemplate.Api/appsettings.Development.json
+++ b/Byndyusoft.ServiceTemplate.Api/appsettings.Development.json
@@ -1,18 +1,18 @@
 {
   "RabbitSettings": {
     "ConnectionString": "host=localhost",
-    "ExchangeName": "incoming_documents",
+    "ExchangeName": "{exchange}",
     "RoutingKey": "",
     "IncomingQueue": ""
   },
   "DatabaseConnectionSettings": {
-    "ConnectionString": "Server=localhost;Port=5432;Database=;User Id=Infinitum;Password=Infinitum;POOLING=True;MINPOOLSIZE=1;MAXPOOLSIZE=1024;"
+    "ConnectionString": "Server=localhost;Port=5432;Database={DB};User Id={UserID};Password={Password};POOLING=True;MINPOOLSIZE=1;MAXPOOLSIZE=1024;"
   },
   "S3Settings": {
     "AccessKey": "minioadmin",
     "SecretKey": "minioadmin",
     "ServiceUrl": "http://localhost:9001/",
-    "BucketName": "infinitum"
+    "BucketName": "test"
   },
   "Jaeger": {
     "JAEGER_AGENT_HOST": "localhost",
