--- a/Byndyusoft.ServiceTemplate.Migrator/appsettings.Development.json
+++ b/Byndyusoft.ServiceTemplate.Migrator/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Main": ""
+    "Main": "Server=localhost;Port=5432;Database={DB};User Id={UserID};Password={Password};POOLING=True;MINPOOLSIZE=1;MAXPOOLSIZE=1024;"
   }
 }
