Вернул строку подключения

--- a/Byndyusoft.ServiceTemplate.Api/appsettings.Development.json
+++ b/Byndyusoft.ServiceTemplate.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     "IncomingQueue": ""
   },
   "DatabaseConnectionSettings": {
-    "ConnectionString": "Server=localhost;Port=5432;Database=IncomingDocument;User Id=Infinitum;Password=Infinitum;POOLING=True;MINPOOLSIZE=1;MAXPOOLSIZE=1024;"
+    "ConnectionString": "Server=localhost;Port=5432;Database={DB};User Id={UserID};Password={Password};POOLING=True;MINPOOLSIZE=1;MAXPOOLSIZE=1024;"
   },
   "S3Settings": {
     "AccessKey": "minioadmin",
