добавил фильтрацию логов

--- a/Byndyusoft.ServiceTemplate.Api/appsettings.json
+++ b/Byndyusoft.ServiceTemplate.Api/appsettings.json
@@ -3,7 +3,11 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Autofac": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "System.Net.Http.HttpClient.Default.ClientHandler": "Warning",
+      "System.Net.Http.HttpClient.Default.LogicalHandler": "Warning"
     }
   },
   "AllowedHosts": "*"
