--- a/Byndyusoft.ServiceTemplate.Api/Byndyusoft.ServiceTemplate.Api.csproj
+++ b/Byndyusoft.ServiceTemplate.Api/Byndyusoft.ServiceTemplate.Api.csproj
@@ -11,6 +11,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="5.0.1" />
 		<PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.0.1" />
 		<PackageReference Include="Jaeger" Version="0.4.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
