--- a/Byndyusoft.ServiceTemplate.csproj
+++ b/Byndyusoft.ServiceTemplate.csproj
@@ -17,7 +17,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Content Include="**/*;" Exclude="**/bin/**;**/obj/**;Readme.md;sod-shared*/**;.vs/**;.git/**;.gitmodules;Byndyusoft.ServiceTemplate.csproj;.github/**;.template.config/*"/>
+		<Content Include="templates/**/*;" Exclude="templates/**/bin/**;templates/**/obj/**;.vs/**"/>
 		<Compile Remove ="**/*"/>
 	</ItemGroup>	
 
